--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -6,36 +6,70 @@
 <polymer-element name="juicy-tile-editor" attributes="selectionMode">
   <template>
     <style>
-      .sidebar {
-        position: fixed;
-        top: 150px;
-        left: 10px;
-        width: 200px;
-        height: calc(100% - 160px);
-        background: white;
-        border: 1px solid black;
-        opacity: 0.8;
-        overflow: auto;
-      }
+        .sidebar {
+            position: fixed;
+            top: 65px;
+            left: 5px;
+            width: 220px;
+            height: calc(100% - 70px);
+            background: white;
+            border: 1px solid black;
+            opacity: 0.85;
+            overflow: auto;
+            padding:0px 5px;
+        }
 
-      .sidebar /deep/ #menu {
-        margin-left: 10px;
-      }
+        :host.max-height .sidebar {
+            top: 35px;
+        }
+
+        .sidebar.right {
+            left:initial;
+            right:5px;
+        }
+
+        .sidebar /deep/ #menu {
+            margin-left: 10px;
+        }
+
+        .sidebar h1 {
+            margin: 5px 0px 0px 0px;
+            font-size: 20px;
+        }
+
+        .sidebar h1 .actions {
+            float:right;
+            margin: -4px 4px 0px 0px;
+        }
+
+        .sidebar h1 .actions a {
+            text-decoration:none;
+            color:#7f899c;
+        }
+
+        .sidebar h1 .actions a:hover {
+            color:#333333;
+        }
     </style>
+
     <juicy-tile-editor-form id="form"
       selectedItems="{{selectedItems}}" 
       editedTiles="{{editedTiles}}"
       on-juicy-tile-editor-revert="{{revertAction}}"
       on-juicy-tile-editor-form-tree-changed="{{treeChangedAction}}"></juicy-tile-editor-form>
 
-    <div class="sidebar">
-      <h1>Elements</h1>
+    <div class="sidebar" id="sidebar">
+      <h1>
+          <span class="actions">
+              <a href="javascript:" title="Move to other side" on-click="{{moveToOtherSide}}">⇔</a>
+          </span>
+         Elements
+      </h1>
       <juicy-tile-tree id="treeView" tree="{{ tree }}"
-        on-juicy-tile-tree-highlight="{{treeHighlightAction}}"
-        on-juicy-tile-tree-highlight-extend="{{treeHighlightExtendAction}}"
-        on-juicy-tile-tree-highlight-remove="{{treeHighlightRemoveAction}}"
-        on-juicy-tile-tree-refresh-tiles="{{refreshTiles}}"></juicy-tile-tree>
-    </div>
+                 on-juicy-tile-tree-highlight="{{treeHighlightAction}}"
+                 on-juicy-tile-tree-highlight-extend="{{treeHighlightExtendAction}}"
+                 on-juicy-tile-tree-highlight-remove="{{treeHighlightRemoveAction}}"
+                 on-juicy-tile-tree-refresh-tiles="{{refreshTiles}}"></juicy-tile-tree></div>
 
     <juicy-highlight id="tileEdited" overlay strokeWidth="3" strokeColor="#33579F" strokeOffset="3"></juicy-highlight>
     <juicy-highlight id="tileRollover" strokeWidth="1" strokeColor="#222222" strokeOffset="4"></juicy-highlight>
