Revert my changes to Tomek's

--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -66,10 +66,11 @@
          Elements
       </h1>
       <juicy-tile-tree id="treeView" tree="{{ tree }}"
-                 on-juicy-tile-tree-highlight="{{treeHighlightAction}}"
-                 on-juicy-tile-tree-highlight-extend="{{treeHighlightExtendAction}}"
-                 on-juicy-tile-tree-highlight-remove="{{treeHighlightRemoveAction}}"
-                 on-juicy-tile-tree-refresh-tiles="{{refreshTiles}}"></juicy-tile-tree></div>
+        on-juicy-tile-tree-highlight="{{treeHighlightAction}}"
+        on-juicy-tile-tree-highlight-extend="{{treeHighlightExtendAction}}"
+        on-juicy-tile-tree-highlight-remove="{{treeHighlightRemoveAction}}"
+        on-juicy-tile-tree-refresh-tile-list="{{refreshTileList}}"></juicy-tile-tree>
+    </div>
 
     <juicy-highlight id="tileEdited" overlay strokeWidth="3" strokeColor="#33579F" strokeOffset="3"></juicy-highlight>
     <juicy-highlight id="tileRollover" strokeWidth="1" strokeColor="#222222" strokeOffset="4"></juicy-highlight>
