--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -113,6 +113,11 @@
         .sidebar .actions a:hover {
             color:#333333;
         }
+
+        .sidebar .sidebar-container {
+            overflow:auto;
+            height:calc(100% - 45px);
+        }
     </style>
 
     <juicy-tile-editor-form id="form"
@@ -129,11 +134,13 @@
               <h1 id="sidebarHeader">
                   Elements
               </h1>
-              <juicy-tile-tree id="treeView" tree="{{ tree }}"
-                               on-juicy-tile-tree-highlight="{{treeHighlightAction}}"
-                               on-juicy-tile-tree-highlight-extend="{{treeHighlightExtendAction}}"
-                               on-juicy-tile-tree-highlight-remove="{{treeHighlightRemoveAction}}"
-                               on-juicy-tile-tree-refresh-tile-list="{{refreshTileList}}"></juicy-tile-tree>
+              <div class="sidebar-container">
+                  <juicy-tile-tree id="treeView" tree="{{ tree }}"
+                                   on-juicy-tile-tree-highlight="{{treeHighlightAction}}"
+                                   on-juicy-tile-tree-highlight-extend="{{treeHighlightExtendAction}}"
+                                   on-juicy-tile-tree-highlight-remove="{{treeHighlightRemoveAction}}"
+                                   on-juicy-tile-tree-refresh-tile-list="{{refreshTileList}}"></juicy-tile-tree>
+              </div>
           </div>
       </juicy-draggable>
 
