Use PartialId to identify partials and their layout - #114, fixes Polyjuice/Polyjuice#34

--- a/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
@@ -73,7 +73,7 @@
 
             <!-- Dashboard/results -->
             <template bind="{{results}}">
-                <launcher-root-partial class="workspace launcher" name="results"></launcher-root-partial>
+                <launcher-root-partial class="workspace launcher" name="/Launcher/results"></launcher-root-partial>
             </template>
             <!-- just "/" or whatever starting from "/launcher/.." except stuff starting from "/launcher/workspace" -->
             <warpech-display-route match-path="^\/launcher\/" display-selector=".workspace.launcher"></warpech-display-route>
@@ -83,7 +83,7 @@
                 <!-- - workspace -->
                 <warpech-display-route match-path="^\/{{appName}}" display-selector=".workspace.{{appName}}"></warpech-display-route>
                 <template bind="{{master}}">
-                    <launcher-root-partial class="workspace {{$parent.appName}}" name="workspaces/{{$parent.appName}}"></launcher-root-partial>
+                    <launcher-root-partial class="workspace {{$parent.appName}}" name="/Launcher/workspaces/{{$parent.appName}}"></launcher-root-partial>
                 </template>
             </template>
         </div>
