--- a/src/Launcher/wwwroot/Launcher/elements/launcher-partial/launcher-partial.html
+++ b/src/Launcher/wwwroot/Launcher/elements/launcher-partial/launcher-partial.html
@@ -1,4 +1,5 @@
 <!--
+@deprecated use launcher-root-partial
 `launcher-partial` - Custom Element that extends `<template>` (w/ Polymer's TempalteBinding)
 by providing predefined template content, which should serve to include partials.
 -->
