Use default PartialId as given by Polyjuice/Polyjuice@6f2cf043bd

--- a/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
@@ -83,7 +83,7 @@
                 <!-- - workspace -->
                 <warpech-display-route match-path="^\/{{appName}}" display-selector=".workspace.{{appName}}"></warpech-display-route>
                 <template bind="{{master}}">
-                    <launcher-root-partial class="workspace {{$parent.appName}}" name="/Launcher/workspaces/{{$parent.appName}}"></launcher-root-partial>
+                    <launcher-root-partial class="workspace {{$parent.appName}}"></launcher-root-partial>
                 </template>
             </template>
         </div>
