bower update (warpech-display-router 0.1.2)

--- a/src/Launcher/wwwroot/sys/warpech-display-router/index.html
+++ b/src/Launcher/wwwroot/sys/warpech-display-router/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
   <title>warpech-display-router</title>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/polymer/0.2.2/platform.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/webcomponentsjs/0.6.1/webcomponents.min.js"></script>
   <link rel="import" href="warpech-display-router.html">
   <style>
     body {
