Remove test fill value

--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor.html
@@ -141,7 +141,7 @@
 
     <juicy-highlight id="tileEdited" strokeWidth="2" strokeColor="#fd7f02" strokeOffset="2" fill="rgba(253, 127, 2, 0.1)"></juicy-highlight>
     <juicy-highlight id="tileRollover" strokeWidth="1" strokeColor="#1E90FF" strokeOffset="2" fill="rgba(0,191,255, 0.2)"></juicy-highlight>
-    <juicy-highlight id="tileSelected" strokeWidth="1" strokeColor="#fd7f02" strokeOffset="2" fill="#FF0000"></juicy-highlight>
+    <juicy-highlight id="tileSelected" strokeWidth="1" strokeColor="#fd7f02" strokeOffset="2"></juicy-highlight>
   </template>
   <script src="juicy-tile-editor.js"></script>
 </polymer-element>
