Juicy/juicy-tile-editor@7d8fbfb
Juicy/juicy-tile-editor@7d8fbfbda4e09165202a91cabd4ac4934cc0a651

https://github.com/Polyjuice/Launcher/issues/116

--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-tree.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-tree.html
@@ -72,8 +72,13 @@
       <template repeat="{{ tree as branch }}" id="recursive">
         <!-- branch -->
         <li>
-          <juicy-toggle-icon-button class="expand" on-tap="{{ expandNode(branch) }}" iconOn="chevron-right" iconOff="expand-more"></juicy-toggle-icon-button
-          ><span on-tap="{{tapAction}}" on-mouseover="{{hoverAction}}" on-mouseout="{{blurAction}}" class="{{ branch | getBranchClassName }}"><core-icon icon="view-quilt" title="juicy-tile-list"><!-- <core-icon icon="dashboard" title="juicy-tile-list"> --></core-icon>{{ {node: branch.node}  | toDisplayName }}</span>
+          <juicy-toggle-icon-button class="expand" iconOn="chevron-right" iconOff="expand-more"></juicy-toggle-icon-button
+          ><span 
+            on-tap="{{tapAction}}" 
+            on-mouseover="{{hoverAction}}" 
+            on-mouseout="{{blurAction}}" 
+            class="{{ branch | getBranchClassName }}"
+            title="{{ toRootName(branch.node) }}"><core-icon icon="view-quilt" title="juicy-tile-list"><!-- <core-icon icon="dashboard" title="juicy-tile-list"> --></core-icon>{{ branch.node.setup.itemName || toRootName(branch.node) }}</span>
 
           <ul class="branch">
             <template repeat="{{ branch.node.setup.items as item }}" id="item">
@@ -82,10 +87,15 @@
                 <template if="{{ item.items }}">
                   <!-- group -->
                   
-                  <juicy-toggle-icon-button class="expand" on-tap="{{ expandNode(item) }}" iconOn="chevron-right" iconOff="expand-more"></juicy-toggle-icon-button
+                  <juicy-toggle-icon-button class="expand" iconOn="chevron-right" iconOff="expand-more"></juicy-toggle-icon-button
                   ><juicy-toggle-icon-button on-tap="{{ refreshTileList }}" iconOff="visibility" iconOn="visibility-off" checked="{{item.hidden}}"></juicy-toggle-icon-button
-                  ><span on-tap="{{tapAction}}" on-mouseover="{{hoverAction}}" on-mouseout="{{blurAction}}" class="{{ item | getBranchClassName }}"
-                    ><core-icon icon="folder" title="group"></core-icon> {{ {node: branch.node, item: item, id: item.id, id: item.id} | toDisplayName }}</span>
+                  ><span 
+                    on-tap="{{tapAction}}" 
+                    on-mouseover="{{hoverAction}}" 
+                    on-mouseout="{{blurAction}}" 
+                    class="{{ item | getBranchClassName }}"
+                    title="{{item.id}}"
+                    ><core-icon icon="folder" title="group"></core-icon> {{ item.itemName || item.id }}</span>
 
                   <ul class="group">
                     <template repeat="{{ item.items as item }}" ref="item"></template>
@@ -98,13 +108,19 @@
                   <template if="{{ !branch.branches[ item.id ] }}">
                     <!-- without nested juicy-tile-list -->
                     <juicy-toggle-icon-button on-tap="{{ refreshTileList }}" iconOff="visibility" iconOn="visibility-off" checked="{{item.hidden}}"></juicy-toggle-icon-button
-                    ><span on-tap="{{tapAction}}" on-mouseover="{{hoverAction}}" on-mouseout="{{blurAction}}" class="{{ item | getBranchClassName }}">{{ {node: branch.node, item: item, id: item.id} | toDisplayName }}</span>
+                    ><span on-tap="{{tapAction}}" on-mouseover="{{hoverAction}}" on-mouseout="{{blurAction}}" class="{{ item | getBranchClassName }}">{{ item.itemName || toDisplayName(item, branch) }}</span>
                   </template>
                   <template if="{{ branch.branches[ item.id ] }}">
                     <!-- with nested juicy-tile-list -->
-                  <juicy-toggle-icon-button class="expand" on-tap="{{ expandNode(item) }}" iconOn="chevron-right" iconOff="expand-more"></juicy-toggle-icon-button
+                  <juicy-toggle-icon-button class="expand" iconOn="chevron-right" iconOff="expand-more"></juicy-toggle-icon-button
                   ><juicy-toggle-icon-button on-tap="{{ refreshTileList }}" iconOff="visibility" iconOn="visibility-off" checked="{{item.hidden}}"></juicy-toggle-icon-button
-                  ><span on-tap="{{tapAction}}" on-mouseover="{{hoverAction}}" on-mouseout="{{blurAction}}" class="{{ item | getBranchClassName }}">⊛<!-- contains juicy-tile-list inside -->{{ {node: branch.node, item: item, id: item.id} | toDisplayName }}</span>
+                  ><span 
+                    on-tap="{{tapAction}}" 
+                    on-mouseover="{{hoverAction}}" 
+                    on-mouseout="{{blurAction}}" 
+                    class="{{ item | getBranchClassName }}"
+                    title="{{item.id}}"
+                    >⊛<!-- contains juicy-tile-list inside -->{{ item.itemName || toDisplayName(item, branch) }}</span>
                     <ul class="group">
                       <template repeat="{{ branch.branches[ item.id ] as branch }}" ref="recursive"></template>
                     </ul>
