--- a/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
+++ b/src/Launcher/wwwroot/sys/juicy-tile-editor/src/juicy-tile-editor-form.html
@@ -272,9 +272,9 @@
       <div class="editableGroup">
         <h4>Container</h4>
 
-          <div class="toolbar-item" data-applyvalue="id" disabled?="{{!isSingleSelection}}">
-              <input placeholder="multiple" type="text" class="handle toolbar-button" value="{{itemId}}" update-on="input" />
-              <label class="toolbar-label">ID</label>
+          <div class="toolbar-item" data-applyvalue="itemName" disabled?="{{!isSingleSelection}}">
+              <input placeholder="multiple" type="text" class="handle toolbar-button" value="{{itemName}}" update-on="input" />
+              <label class="toolbar-label">Name</label>
           </div>
 
         <div class="toolbar-item" disabled?="{{!isContainer && !isRoot}}">
