--- a/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
+++ b/src/Launcher/wwwroot/Launcher/LauncherTemplate.html
@@ -84,8 +84,8 @@
             <!-- Workspaces -->
             <template repeat="{{ workspaces }}">
                 <!-- - workspace -->
-                <juicy-display-route match-path="^\/{{Launcher.appName}}" display-selector=".workspace.{{Launcher.appName}}"></juicy-display-route>
-                <launcher-root-partial class="workspace {{Launcher.appName}}"></launcher-root-partial>
+                <juicy-display-route match-path="^\/{{AppName}}" display-selector=".workspace.{{AppName}}"></juicy-display-route>
+                <launcher-root-partial class="workspace {{AppName}}"></launcher-root-partial>
             </template>
         </div>
     </template>
